Letter Spacing Fix

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,6 +14,7 @@ h1 {
   margin: 0;
   font-size: 6.875vw;
   letter-spacing: 0.4em;
+  margin-right: -0.4em;
 }
 
 h2 {
@@ -21,6 +22,7 @@ h2 {
   font-weight: 500;
   font-size: 2.5vw;
   letter-spacing: 0.2em;
+  margin-right: -0.2em;
 }
 
 .logo {
